Atualização: 	Tela de visualizar produto adicionada 	Tela de alteração de status adicionada 	Mais testes para upload de imagem

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,11 @@
     <servlet>
         <servlet-name>PostProdutos</servlet-name>
         <servlet-class>Servlet.PostProdutos</servlet-class>
+        <multipart-config>
+            <max-file-size>10485760</max-file-size>
+            <max-request-size>20971520</max-request-size>
+            <file-size-threshold>5242880</file-size-threshold>
+        </multipart-config>
     </servlet>
     <servlet>
         <servlet-name>GetProduto</servlet-name>
@@ -19,6 +24,10 @@
     <servlet>
         <servlet-name>DeleteProduto</servlet-name>
         <servlet-class>Servlet.DeleteProduto</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ToggleProduto</servlet-name>
+        <servlet-class>Servlet.ToggleProduto</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>GetProdutos</servlet-name>
@@ -39,6 +48,10 @@
     <servlet-mapping>
         <servlet-name>DeleteProduto</servlet-name>
         <url-pattern>/DeleteProduto</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ToggleProduto</servlet-name>
+        <url-pattern>/ToggleProduto</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
