Atualização: 	Visual das paginas 'Principal' e 'produtoSelecionado' 	Adição de atributo estrelas para mostrar a nota do produto 	Criação do arquivo menu_inc -> importado em todas as paginas jsp 	para manter organizado o codigo

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -69,6 +69,9 @@
         <servlet-name>ProdutoSelecionado</servlet-name>
         <url-pattern>/ProdutoSelecionado</url-pattern>
     </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
     <session-config>
         <session-timeout>
             30
