Adiçaõ de formas de pagamento, não funcionando ainda

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -113,6 +113,10 @@
         <servlet-name>DeleteFromCarrinho</servlet-name>
         <servlet-class>Servlet.DeleteFromCarrinho</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CheckoutCompra</servlet-name>
+        <servlet-class>Servlet.CheckoutCompra</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>GetProdutos</servlet-name>
         <url-pattern>/GetProdutos</url-pattern>
@@ -215,6 +219,10 @@
     <servlet-mapping>
         <servlet-name>DeleteFromCarrinho</servlet-name>
         <url-pattern>/DeleteFromCarrinho</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CheckoutCompra</servlet-name>
+        <url-pattern>/CheckoutCompra</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
